# yolo-ios-app

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  PROMPT.md  Package.resolved  Package.swift  Podfile  README.md  README.zh-CN.md  UI_Implementation_Guide.md  UI_Migration_Strategy.md  UltralyticsYOLO.podspec  Ultralytics_YOLO_iOS_New_UI_Spec.md  YOLO-Bridging-Header.h  YOLO.podspec  build_ipa.sh  cli_error.md  codecov.yml  commit_changes.sh  error.txt  exportOptions.plist  pr_description.md  pyproject.toml  slider_spec.md
.github/: codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: ci.yml  cla.yml  code-coverage.yml  format.yml  publish.yml  swift-format.yml  tag.yml
Example-Apps/: README.md
ExampleApps/: README.md
Sources/UltralyticsYOLO/: BasePredictor.swift  BoundingBoxView.swift  Classifier.swift  DepthEstimator.swift  Logger.swift  MiniZip.swift  ModelPathResolver.swift  NonMaxSuppression.swift  ObbDetector.swift  ObjectDetector.swift  Plot.swift  PoseEstimator.swift  Predictor.swift  README.md  Segmenter.swift  SemanticSegmenter.swift  ThresholdProvider.swift  VideoCapture.swift  YOLO.swift  YOLOCamera.swift  YOLOInfoViewController.swift  YOLOModelCache.swift  YOLOModelDownloader.swift  YOLOResult.swift  YOLOTask.swift  YOLOView.swift
Sources/YOLO/: 0SkeletonUtilities.swift  ArticulatedSkeletonMask.swift  BasePredictor.swift  BoundingBoxView.swift  Classifier.swift  ImageUtils.swift  Logger.swift  MLMultiArray+SafeRead.swift  MiniZip.swift  ModelPathResolver.swift  NonMaxSuppression.swift  ObbDetector.swift  ObjectDetector.swift  Plot.swift  PoseEstimater.swift  PoseEstimator.swift  Predictor.swift  README.md  RealisticSkeletonMask.swift  Segmenter.swift  SemanticSegmenter.swift  ThresholdProvider.swift  UIImage+Orientation.swift  VideoCapture.swift  YOLO.swift  YOLOCamera.swift  YOLOInfoViewController.swift  YOLOModelCache.swift  YOLOModelDownloader.swift  YOLOResult.swift  YOLOTask.swift  YOLOView.swift
Sources/YOLOCore/: YOLO.swift  YOLOConfiguration.swift  YOLOResult.swift  YOLOSession.swift  YOLOTask.swift
Sources/YOLOUI/: CameraPreview.swift  YOLOCamera.swift  YOLOUI.swift
Tests/YOLOTests/: BasePredictorTests.swift  BoundingBoxViewTests.backup  BoundingBoxViewTests.swift  ClassifierTests.swift  ClassifierUnitTests.swift  ComponentTests.swift  ComponentTests.swift.backup  DepthEstimatorTests.swift  ImageUtilsTests.swift  LetterboxTests.swift  MiniZipTests.swift  NonMaxSuppressionTests.backup  NonMaxSuppressionTests.swift  OBBDetectorTests.backup  OBBDetectorTests.swift  ObbDetectorTests.swift  ObjectDetectorTests.backup  ObjectDetectorTests.swift  PlotAdaptiveSizeTests.swift  PlotTests.swift  PoseEstimaterTests.backup  PoseEstimaterTests.swift  PoseEstimatorTests.backup  README.md  SegmenterTests.backup  SegmenterTests.swift  SemanticSegmenterTests.swift  TestHelper.swift  TestHelpers.swift  ThresholdProviderTests.swift  UIImageOrientationTests.swift  VideoCaptureTests.backup  VideoCaptureTests.swift  YOLOCameraTests.swift  YOLOErrorHandlingTests.backup  YOLOErrorHandlingTests.swift  YOLOIntegrationTests.swift  YOLOMainTests.swift  YOLOResultTests.swift  YOLOSSOTMergeTests.swift  (+6 more)
YOLO/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  Main.storyboard  Utils.swift  VNOnnxHandler.swift  VNOnnxRequest.swift  VideoCapture.swift  ViewController.swift
YOLO-iOS-App/: README.md
YOLO-iOS-App/YOLO/: Main.storyboard
YOLO-iOS-App/YOLO-iOS-App/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  Main.storyboard  ModelDownloadManager.swift  RemoteModels.swift  ViewController.swift
YOLO-iOS-App/YOLO-iOS-App.xcodeproj/: project.pbxproj
YOLO.xcodeproj/: project.pbxproj
YOLO/Models/: README.md  (+1 more)
YOLOiOSApp/: AddFilesToXcode.md  MODEL_LIST_UPDATE_STRATEGY.md  MODEL_LIST_UPDATE_SUMMARY.md  README.md
docs/: README.md  performance.md
scripts/: copy-yolo26-models.sh  download-app-models.sh  download-models.sh  download-test-models.sh  export-models.py  prevent-ds-store.sh
template/: README.md  __init__.py  module1.py
tests/: README.md  test_module1.py
(+208 files in other folders)
